--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "core-js": "^2.6.5",
+    "d3": "^5.12.0",
+    "d3-cloud": "^1.2.5",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "vue": "^2.6.10"
   },
   "devDependencies": {
