--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "core-js": "^2.6.5",
     "d3": "^5.12.0",
     "d3-cloud": "^1.2.5",
+    "express": "^4.17.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "vue": "^2.6.10"
