--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "jest": "^25.1.0",
+    "jest-fetch-mock": "^3.0.1",
     "vue-jest": "^3.0.5",
     "vue-template-compiler": "^2.6.11",
     "vue-test-utils": "^1.0.0-beta.11"
@@ -48,7 +49,10 @@
     "transform": {
       ".*\\.(vue)$": "vue-jest",
       "^.+\\.js$": "babel-jest"
-    }
+    },
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTest.js"
+    ]
   },
   "eslintConfig": {
     "root": true,
