--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
-    "core-js": "^2.6.11",
+    "core-js": "^3.6.5",
     "d3": "^6.6.0",
     "d3-cloud": "^1.2.5",
     "express": "^4.17.1",
@@ -21,9 +21,9 @@
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-babel": "~4.5.13",
     "@vue/cli-plugin-eslint": "^4.5.8",
-    "@vue/cli-service": "^3.12.1",
+    "@vue/cli-service": "~4.5.13",
     "@vue/test-utils": "^1.1.3",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
@@ -36,23 +36,6 @@
     "vue-jest": "^3.0.6",
     "vue-template-compiler": "^2.6.12",
     "vue-test-utils": "^1.0.0-beta.11"
-  },
-  "jest": {
-    "moduleNameMapper": {
-      "^@/(.*)$": "<rootDir>/src/$1"
-    },
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "vue"
-    ],
-    "transform": {
-      ".*\\.(vue)$": "vue-jest",
-      "^.+\\.js$": "babel-jest"
-    },
-    "setupFilesAfterEnv": [
-      "<rootDir>/setupTest.js"
-    ]
   },
   "eslintConfig": {
     "root": true,
@@ -76,5 +59,22 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "jest": {
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    },
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "vue"
+    ],
+    "transform": {
+      ".*\\.(vue)$": "vue-jest",
+      "^.+\\.js$": "babel-jest"
+    },
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTest.js"
+    ]
+  }
 }
