--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ jobs:
 
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         env:
-          PUBLIC_PATH: github-stats-dashboard/
+          PUBLIC_PATH: /github-stats-dashboard
         run: |
           npm install
           npm run build
