--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "last 2 versions"
   ],
   "jest": {
+    "testEnvironment": "jsdom",
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/src/$1"
     },
