--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.1.0",
     "babel-preset-env": "^1.7.0",
+    "canvas": "^2.8.0",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2",
     "jest": "^27.1.1",
