--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,7 @@
 name: Deploy
+
 on: [push]
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -10,10 +12,15 @@ jobs:
       - name: Install
         run: npm install
 
-      - name: Test ✅ # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+      - name: Test ✅
+        if: github.ref != 'refs/heads/master'
         run: npm run test
 
-      - name: Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+      - name: Coverage ✅
+        if: github.ref == 'refs/heads/master'
+        run: npm run coveralls
+
+      - name: Build 🔧
         env:
           PUBLIC_PATH: /github-stats-dashboard
         run: npm run build
