--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,6 +2,10 @@ name: Deploy
 
 on: [push]
 
+env:
+  CI: true
+  COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
