--- a/package.json
+++ b/package.json
@@ -24,23 +24,24 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/vue": "^5.8.3",
-    "@vue/cli-plugin-babel": "~4.5.13",
-    "@vue/cli-plugin-eslint": "^4.5.17",
-    "@vue/cli-service": "~4.5.13",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
     "@vue/test-utils": "^1.2.2",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.1.0",
     "babel-jest": "^28.1.2",
     "babel-preset-env": "^1.7.0",
     "canvas": "^2.9.1",
     "coveralls": "^3.1.1",
-    "eslint": "^6.8.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-vue": "^9.1.0",
     "jest": "^27.5.1",
     "jest-fetch-mock": "^3.0.3",
     "vue-jest": "^3.0.6",
     "vue-template-compiler": "^2.7.8",
-    "vue-test-utils": "^1.0.0-beta.11"
+    "vue-test-utils": "^1.0.0-beta.11",
+    "@babel/eslint-parser": "^7.12.16",
+    "@babel/core": "^7.12.16"
   },
   "eslintConfig": {
     "root": true,
@@ -53,7 +54,7 @@
     ],
     "rules": {},
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "@babel/eslint-parser"
     }
   },
   "postcss": {
