--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,9 @@ env:
 
 jobs:
   build-and-deploy:
+    defaults:
+      run:
+        working-directory: webapp
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
