--- a/webapp/package.json
+++ b/webapp/package.json
@@ -22,6 +22,8 @@
     "vue-router": "^3.6.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.6",
+    "@babel/eslint-parser": "^7.12.16",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/vue": "^5.8.3",
     "@vue/cli-plugin-babel": "~5.0.8",
@@ -39,9 +41,7 @@
     "jest-fetch-mock": "^3.0.3",
     "vue-jest": "^3.0.6",
     "vue-template-compiler": "^2.7.9",
-    "vue-test-utils": "^1.0.0-beta.11",
-    "@babel/eslint-parser": "^7.12.16",
-    "@babel/core": "^7.19.6"
+    "vue-test-utils": "^1.0.0-beta.11"
   },
   "eslintConfig": {
     "root": true,
