--- a/webapp/package.json
+++ b/webapp/package.json
@@ -6,82 +6,72 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "node server.js",
     "test": "jest",
     "coverage": "jest --collectCoverage --ci --colors",
-    "coveralls": "yarn coverage && coveralls < coverage/lcov.info"
+    "coveralls": "npm run coverage && coveralls < coverage/lcov.info"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
+    "core-js": "^3.8.3",
     "d3": "^5.5.0",
     "d3-cloud": "^1.2.5",
-    "express": "^4.18.1",
-    "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "vue": "^2.7.9",
-    "vue-router": "^3.6.4"
+    "vue": "^3.2.13",
+    "vue-class-component": "^8.0.0-0",
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.6",
-    "@babel/eslint-parser": "^7.12.16",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/vue": "^5.8.3",
-    "@vue/cli-plugin-babel": "~5.0.8",
-    "@vue/cli-plugin-eslint": "~5.0.8",
-    "@vue/cli-service": "~5.0.8",
-    "@vue/test-utils": "^1.2.2",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^29.2.2",
-    "babel-preset-env": "^1.7.0",
+    "@testing-library/vue": "^7.0.0",
+    "@types/jest": "^29.5.0",
+    "@types/lodash": "^4.14.192",
+    "@types/testing-library__jest-dom": "^5.14.5",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-plugin-typescript": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "@vue/eslint-config-standard": "^6.1.0",
+    "@vue/eslint-config-typescript": "^9.1.0",
+    "@vue/vue3-jest": "^29.2.3",
     "canvas": "^2.9.3",
     "coveralls": "^3.1.1",
-    "eslint": "^8.28.0",
-    "eslint-plugin-vue": "^9.4.0",
-    "jest": "^27.5.1",
+    "eslint": "^7.32.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "jest-fetch-mock": "^3.0.3",
-    "vue-jest": "^3.0.6",
-    "vue-template-compiler": "^2.7.9",
-    "vue-test-utils": "^1.0.0-beta.11"
+    "ts-jest": "^29.0.5",
+    "typescript": "~4.5.5",
+    "vue-jest": "^4.0.1"
   },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ],
   "jest": {
     "testEnvironment": "jsdom",
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/src/$1"
     },
+    "testEnvironmentOptions": {
+      "customExportConditions": [
+        "node",
+        "node-addons"
+      ]
+    },
     "moduleFileExtensions": [
       "js",
-      "json",
-      "vue"
+      "ts",
+      "vue",
+      "json"
     ],
     "transform": {
-      ".*\\.(vue)$": "vue-jest",
-      "^.+\\.js$": "babel-jest"
+      "^.+\\.ts$": "ts-jest",
+      "^.+\\.vue$": "@vue/vue3-jest"
     },
     "setupFilesAfterEnv": [
-      "<rootDir>/setupTest.js"
+      "<rootDir>/setupTest.ts"
     ]
   }
 }
