--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install
-        run: npm install
+        run: |
+          npm config set legacy-peer-deps true
+          npm install
 
       - name: Test ✅
         if: github.ref != 'refs/heads/master'
