--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,11 +22,11 @@ jobs:
           npm install
 
       - name: Test ✅
-        if: github.ref != 'refs/heads/master'
+        if: github.ref != 'refs/heads/main'
         run: npm run test
 
       - name: Coverage ✅
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/main'
         run: npm run coveralls
 
       - name: Build 🔧
@@ -35,7 +35,7 @@ jobs:
         run: npm run build
 
       - name: Deploy 🚀
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/main'
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
