--- a/aggregator/pyproject.toml
+++ b/aggregator/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Matheus Marabesi <matheus.marabesi@gmail.com>"]
 python = "^3.9"
 requests = "^2.28.1"
 python-dotenv = "^0.21.0"
+matplotlib = "^3.7.1"
 
 [tool.poetry.dev-dependencies]
 
