--- a/aggregator/pyproject.toml
+++ b/aggregator/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.9"
 requests = "^2.28.1"
 python-dotenv = "^0.21.0"
 matplotlib = "^3.7.1"
+numpy = "^1.24.2"
+pandas = "^1.5.3"
 
 [tool.poetry.dev-dependencies]
 
