--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,6 +20,8 @@
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
+    "@swc/core": "^1.3.44",
+    "@swc/jest": "^0.2.24",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/vue": "^7.0.0",
     "@types/jest": "^29.5.0",
@@ -67,7 +69,7 @@
       "json"
     ],
     "transform": {
-      "^.+\\.ts$": "ts-jest",
+      "^.+\\.(t|j)sx?$": "@swc/jest",
       "^.+\\.vue$": "@vue/vue3-jest"
     },
     "setupFilesAfterEnv": [
