--- a/aggregator/pyproject.toml
+++ b/aggregator/pyproject.toml
@@ -11,6 +11,7 @@ python-dotenv = "^0.21.0"
 matplotlib = "^3.7.1"
 numpy = "^1.24.2"
 pandas = "^1.5.3"
+pytest = "^7.2.2"
 
 [tool.poetry.dev-dependencies]
 
