--- a/aggregator/pyproject.toml
+++ b/aggregator/pyproject.toml
@@ -12,6 +12,7 @@ matplotlib = "^3.7.1"
 numpy = "^1.24.2"
 pandas = "^1.5.3"
 pytest = "^7.2.2"
+python-slugify = "^8.0.1"
 
 [tool.poetry.dev-dependencies]
 
