--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,8 @@ jobs:
 
       - name: Coverage ✅
         if: github.ref == 'refs/heads/main'
+        env:
+          COVERALLS_FLAG_NAME: webapp
         run: npm run coveralls
 
       - name: Build 🔧
