--- a/aggregator/pyproject.toml
+++ b/aggregator/pyproject.toml
@@ -11,10 +11,11 @@ python-dotenv = "^0.21.0"
 matplotlib = "^3.7.1"
 numpy = "^1.24.2"
 pandas = "^1.5.3"
-pytest = "^7.2.2"
 python-slugify = "^8.0.1"
 
 [tool.poetry.dev-dependencies]
+pytest-mock = "^3.10.0"
+pytest = "^7.2.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
