--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,7 @@ on: [push]
 env:
   CI: true
   COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
+  NODE_ENV: production
 
 jobs:
   build-and-deploy:
