--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Build 🔧
         env:
           NODE_ENV: production
-          PUBLIC_PATH: /github-stats-dashboard
+          PUBLIC_PATH: /github-analytics
         run: npm run build
 
       - name: Deploy 🚀
